Fixed guaranteed Crit on percentage greater than 99